[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/things/FallingPlatformManager.gd" type="Script" id=1]

[node name="FallingPlatformManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="BackTo1Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="BackTo1Timer" to="." method="_on_BackTo1Timer_timeout"]
